Display dropdowns, get sorting of option values correct within dropdown

--- a/config/locales/en_spree.yml
+++ b/config/locales/en_spree.yml
@@ -2,3 +2,4 @@
 en:
   display_as_dropdown: "Display as a drop down selection"
   drag_to_reorder: "Drag to reorder"
+  redirect_on_select: "Redirect when selection changed"
