--- a/config/locales/en_spree.yml
+++ b/config/locales/en_spree.yml
@@ -3,3 +3,4 @@ en:
   display_as_dropdown: "Display as a drop down selection"
   drag_to_reorder: "Drag to reorder"
   redirect_on_select: "Redirect when selection changed"
+  item_added_to_cart: "Item added to Cart"
